correction in alias retrieval, renaming