@@ -5,6 +5,7 @@ import android.test.InstrumentationTestCase;
 
 import java.io.IOException;
 import java.security.PrivateKey;
+import java.security.PublicKey;
 import java.security.cert.Certificate;
 import java.util.LinkedList;
 
@@ -42,13 +43,44 @@ public class CryptMailTest extends InstrumentationTestCase {
         targetcontext.deleteFile(this.ksFileName);
         KeyStoreHandler ksh = new KeyStoreHandler(targetcontext, this.ksFileName, this.ksPasswd);
         ksh.initKeyStore();
-        LinkedList genCertChainPrivKeyOutput = KeyStoreHandlerTest.generateCertChainPrivKey(targetcontext);
+        LinkedList genCertChainPrivKeyOutput = KeyStoreHandlerTest.generateCertChainPrivPubKey(targetcontext);
+        Certificate[] chain = (Certificate[]) genCertChainPrivKeyOutput.get(0);
+        PrivateKey privkey = (PrivateKey) genCertChainPrivKeyOutput.get(1);
+        String privKeyPasswd = "4r3e2w1q";
+        ksh.addPrivKeyAndCertificate("myalias", chain, privkey, privKeyPasswd.toCharArray());
+
+        String plaintext = dm.decrypt(this.ksFileName, this.ksPasswd, "myalias", ciphertext);
+        assertEquals("hello world!", plaintext);
+
+        targetcontext.deleteFile(this.ksFileName);
+    }
+
+    public void testDecrypt2() {
+        Context targetcontext = getInstrumentation().getTargetContext();
+        CryptMail cm = new CryptMail(targetcontext);
+        String ciphertext = "MIAGCSqGSIb3DQEHA6CAMIACAQAxggGuMIIBqgIBADCBkTCBhTELMAkGA1UEBhMCREUxKDAm"+
+                            "BgNVBAoTH1RlY2huaXNjaGUgVW5pdmVyc2l0YWV0IERyZXNkZW4xDDAKBgNVBAsTA1pJSDEc"+
+                            "MBoGA1UEAxMTVFUgRHJlc2RlbiBDQSAtIEcwMjEgMB4GCSqGSIb3DQEJARYRcGtpQHR1LWRy"+
+                            "ZXNkZW4uZGUCBxkFduW1IpMwDQYJKoZIhvcNAQEBBQAEggEAMWlTpvupD29t8Od7ZoGHGqk8"+
+                            "rmgmQPHbOHO0sUGGx6D2S9ab2OtuZLOoeUjeH/rV5KiPPm9qobKJQC+zR/5Dr3qETihIo80p"+
+                            "2fUituGyvPzbc7tAcUHtFdEW7zyVifrUKVK4EHzR+5giALyV0kr/5rgoVF1js/4eGDGjweGe"+
+                            "F3fzfAy530v+zFrxIV50qUkQQznu8B/Nj/tp0yox5tXdw/Hm5DCYNgXvgk3Hj77Nmfn8n2N5"+
+                            "ZvKh+TmaCtmnHuTvTCd4K6gziS6oyfh3uHhsFNoS0HXvXjt+dAUuWAWx+v2Bv+HUyw2IlLxC"+
+                            "u9AQEYvyDbyvc2n9fSI92a84VikQ+jCABgkqhkiG9w0BBwEwFAYIKoZIhvcNAwcECOrFFZ00"+
+                            "KmEMoIAEeHGQ54K6g4mW4G9/ECktDSpdWvO927Z2cJCcKrp+K9QUMSEMhjcWYlZ9QfaSpwwc"+
+                            "NrTEH8+P12saF2ySiuqbrd5Mt9ZIAKcZ5swYrKBE3NYoPYNQ08C3Jo6EJAve/7oR9Dh5xdK9"+
+                            "/hVJ/ocDzfGkKYg30XByJNqfhwQIhaetMPv3yjoAAAAAAAAAAAAA";
+
+        targetcontext.deleteFile(this.ksFileName);
+        KeyStoreHandler ksh = new KeyStoreHandler(targetcontext, this.ksFileName, this.ksPasswd);
+        ksh.initKeyStore();
+        LinkedList genCertChainPrivKeyOutput = KeyStoreHandlerTest.generateCertChainPrivPubKey(targetcontext);
         Certificate[] chain = (Certificate[]) genCertChainPrivKeyOutput.getFirst();
         PrivateKey privkey = (PrivateKey) genCertChainPrivKeyOutput.getLast();
         String privKeyPasswd = "4r3e2w1q";
         ksh.addPrivKeyAndCertificate("myalias", chain, privkey, privKeyPasswd.toCharArray());
 
-        String plaintext = dm.decrypt(this.ksFileName, this.ksPasswd, "myalias", ciphertext);
+        String plaintext = cm.decrypt(this.ksFileName, this.ksPasswd, "myalias", ciphertext);
         assertEquals("hello world!", plaintext);
 
         targetcontext.deleteFile(this.ksFileName);
@@ -60,12 +92,13 @@ public class CryptMailTest extends InstrumentationTestCase {
         targetcontext.deleteFile(this.ksFileName);
         KeyStoreHandler ksh = new KeyStoreHandler(targetcontext, this.ksFileName, this.ksPasswd);
         ksh.initKeyStore();
-        //TODO put public key into keystore
-        LinkedList genCertChainPrivKeyOutput = KeyStoreHandlerTest.generateCertChainPrivKey(targetcontext);
-        Certificate[] chain = (Certificate[]) genCertChainPrivKeyOutput.getFirst();
-        PrivateKey privkey = (PrivateKey) genCertChainPrivKeyOutput.getLast();
-        String privKeyPasswd = "4r3e2w1q";
-        ksh.addPrivKeyAndCertificate("myalias", chain, privkey, privKeyPasswd.toCharArray());
+        LinkedList genCertChainPrivKeyOutput = KeyStoreHandlerTest.generateCertChainPrivPubKey(targetcontext);
+        Certificate[] chain = (Certificate[]) genCertChainPrivKeyOutput.get(0);
+        //PrivateKey privkey = (PrivateKey) genCertChainPrivKeyOutput.get(1);
+        PublicKey pubkey = (PublicKey) genCertChainPrivKeyOutput.get(2);
+        //String privKeyPasswd = "4r3e2w1q";
+        //ksh.addPrivKeyAndCertificate("myalias", chain, privkey, privKeyPasswd.toCharArray());
+        ksh.addPubKey("myalias", pubkey, chain);
 
         MimeMessage mm = dm.encrypt(this.ksFileName, this.ksPasswd, "myalias", "hello world!");
 
